Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -22,7 +22,17 @@
       <h3>
 <a id="welcome-to-eiffel" class="anchor" href="#welcome-to-eiffel" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to Eiffel</h3>
 
-<p>This page is a placeholder.</p>
+<p>The Eiffel protocol enables technology agnostic enterprise scale continuous integration and delivery with maintained scalability, flexibility and traceability. Eiffel is based on the concept of decentralized real time messaging, both to drive the continuous integration and delivery system and to document it.</p>
+
+<p>This repository contains the Eiffel framework vocabulary, descriptions, guides and schemas along with links to relevant implementation repositories.</p>
+
+<h3>
+<a id="community-resources" class="anchor" href="#community-resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Community Resources</h3>
+
+<ul>
+<li><a href="https://groups.google.com/forum/#!forum/eiffel-community">Eiffel Community Google group</a></li>
+<li><a href="https://www.youtube.com/channel/UC3Zx84ecQ1jyGSc9709xrZg">Eiffel Community Youtube channel</a></li>
+</ul>
 
       <footer class="site-footer">
         <span class="site-footer-owner"><a href="https://github.com/Ericsson/eiffel">Eiffel</a> is maintained by <a href="https://github.com/Ericsson">Ericsson</a>.</span>
