Added embedded Youtube clip to front page.

--- a/index.html
+++ b/index.html
@@ -26,6 +26,8 @@
 
 <p>This repository contains the Eiffel framework vocabulary, descriptions, guides and schemas along with links to relevant implementation repositories.</p>
 
+<div style="text-align: center"><iframe width="560" height="315" src="https://www.youtube.com/embed/FNF6b4Yv7oQ" frameborder="0" allowfullscreen></iframe></div>
+
 <h3>
 <a id="community-resources" class="anchor" href="#community-resources" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Community Resources</h3>
 
